--- a/public/diia_U/main/testimonial-style.css
+++ b/public/diia_U/main/testimonial-style.css
@@ -257,6 +257,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    margin-left:auto;
     align-items: center;
     margin-top: 2rem; /* Shift the whole testimonial section down */
     padding-bottom: 2rem; /* Add padding to the bottom */
